--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <form action="#" method="get">
         <input type="text" name="firstname" id="firstname">
         <input type="text" name="Lastname" id="Lastname">
+        <input type="number" name="age" id="age">
         <input type="button" value="enviar">
     </form>
 </body>
