--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>titulo nuevo otra vez</h1>
     <form action="#" method="get">
-        <input type="text" name="firstname" id="firstname">
+        <input type="numer" name="number" id="firstname">
         <input type="text" name="Lastname" id="Lastname">
         <input type="number" name="age" id="age">
         <input type="button" value="enviar">
