--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <input type="numer" name="number" id="firstname">
         <input type="text" name="Lastname" id="Lastname">
         <input type="number" name="age" id="age">
+        <img src="#" alt="Test img" />
         <input type="button" value="enviar">
     </form>
 </body>
