fix video folder

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <input type="text" name="Lastname" id="Lastname">
         <input type="number" name="age" id="age">
         <img src="#" alt="Test 2 img" />
-        <video src="cat.mp4"></video>
+        <video src="video/cat.mp4"></video>
         <input type="button" value="enviar">
     </form>
 </body>
